tdf#159027: Fix calculation in tables with merged cells

Calculation in tables with merged cells over multiple pages is fixed.
It's more a workaround than a fix as it skips an empty SwRowFrame
returned from SwTabFrame::GetFirstNonHeadlineRow()

Change-Id: If11838da9769e0f6b0e54da8f422b4884684e30f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166254
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>