sw/qa/extras/odfexport/odfexport2.cxx
@@ -36,6 +36,7 @@
 #include <unoprnms.hxx>
 #include <unotxdoc.hxx>
 #include <docsh.hxx>
+#include <IDocumentFieldsAccess.hxx>
 
 class Test : public SwModelTestBase
 {
@@ -1444,6 +1445,20 @@ DECLARE_ODFEXPORT_TEST(testTdf160877, "tdf160877.odt")
     CPPUNIT_ASSERT_EQUAL(OUString("(Sign GB)Test"), getParagraph(1)->getString());
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf159027)
+{
+    loadAndReload("tdf159027.odt");
+    SwDoc* pDoc = getSwDoc();
+    pDoc->getIDocumentFieldsAccess().UpdateFields(true);
+
+    uno::Reference<text::XTextTablesSupplier> xTablesSupplier(mxComponent, uno::UNO_QUERY);
+    uno::Reference<container::XIndexAccess> xTables(xTablesSupplier->getTextTables( ), uno::UNO_QUERY);
+    uno::Reference<text::XTextTable> xTextTable(xTables->getByIndex(0), uno::UNO_QUERY);
+    uno::Reference<text::XTextRange> xCellD9(xTextTable->getCellByName(u"D9"_ustr), uno::UNO_QUERY);
+    CPPUNIT_ASSERT_EQUAL(u"70"_ustr, xCellD9->getString());
+    uno::Reference<text::XTextRange> xCellE9(xTextTable->getCellByName(u"E9"_ustr), uno::UNO_QUERY);
+    CPPUNIT_ASSERT_EQUAL(u"6"_ustr, xCellE9->getString());
+}
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
